fixed flicker

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html{
 	border: solid black 3px;
 	border-radius: 5px;
 	
-	display: none;
+	pointer-events: none;
 	
 }
 
